Get rid of logs pvc

--- a/sheduler/airflow-scheduler.yaml
+++ b/sheduler/airflow-scheduler.yaml
@@ -80,8 +80,8 @@ spec:
           subPath: airflow.cfg
         - mountPath: /usr/local/airflow/dags
           name: airflow-dags
-        - mountPath: /usr/local/airflow/logs
-          name: airflow-logs
+        # - mountPath: /usr/local/airflow/logs
+        #   name: airflow-logs
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
@@ -90,9 +90,9 @@ spec:
       serviceAccountName: airflow-cluster-access
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: airflow-logs
-        persistentVolumeClaim:
-          claimName: airflow-logs
+      # - name: airflow-logs
+      #   persistentVolumeClaim:
+      #     claimName: airflow-logs
       - configMap:
           defaultMode: 420
           name: airflow-config
