--- a/rbac/airflow-cluster-access-crb.yaml
+++ b/rbac/airflow-cluster-access-crb.yaml
@@ -1,13 +1,24 @@
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRoleBinding
+# metadata:
+#   labels:
+#     app: airflow-scheduler
+#   name: airflow-cluster-access
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: ClusterRole
+#   name: cluster-admin
+# subjects:
+# - kind: ServiceAccount
+#   name: airflow-cluster-access
+#   namespace: airflow
+
+apiVersion: v1
+kind: RoleBinding
 metadata:
-  labels:
-    app: airflow-scheduler
   name: airflow-cluster-access
 roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cluster-admin
+  name: edit
 subjects:
 - kind: ServiceAccount
   name: airflow-cluster-access
