--- a/web/airflow-web.yaml
+++ b/web/airflow-web.yaml
@@ -58,40 +58,40 @@ spec:
         volumeMounts:
         - mountPath: /git
           name: airflow-dags
-      - image: serverbee/airflow-nginx
-        imagePullPolicy: IfNotPresent
-        livenessProbe:
-          failureThreshold: 5
-          httpGet:
-            path: /health
-            port: 8081
-            scheme: HTTP
-          initialDelaySeconds: 5
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 5
-        name: nginx
-        ports:
-        - containerPort: 80
-          name: nginx
-          protocol: TCP
-        readinessProbe:
-          failureThreshold: 3
-          httpGet:
-            path: /health
-            port: 8081
-            scheme: HTTP
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          successThreshold: 1
-          timeoutSeconds: 5
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-        volumeMounts:
-        - mountPath: /etc/nginx/conf.d/default.conf
-          name: nginx
-          subPath: nginx.conf
+      # - image: serverbee/airflow-nginx
+      #   imagePullPolicy: IfNotPresent
+      #   livenessProbe:
+      #     failureThreshold: 5
+      #     httpGet:
+      #       path: /health
+      #       port: 8081
+      #       scheme: HTTP
+      #     initialDelaySeconds: 5
+      #     periodSeconds: 10
+      #     successThreshold: 1
+      #     timeoutSeconds: 5
+      #   name: nginx
+      #   ports:
+      #   - containerPort: 80
+      #     name: nginx
+      #     protocol: TCP
+      #   readinessProbe:
+      #     failureThreshold: 3
+      #     httpGet:
+      #       path: /health
+      #       port: 8081
+      #       scheme: HTTP
+      #     initialDelaySeconds: 5
+      #     periodSeconds: 5
+      #     successThreshold: 1
+      #     timeoutSeconds: 5
+      #   resources: {}
+      #   terminationMessagePath: /dev/termination-log
+      #   terminationMessagePolicy: File
+      #   volumeMounts:
+      #   - mountPath: /etc/nginx/conf.d/default.conf
+      #     name: nginx
+      #     subPath: nginx.conf
       - args:
         - webserver
         env:
@@ -109,7 +109,7 @@ spec:
           failureThreshold: 5
           httpGet:
             path: /health
-            port: 8081
+            port: 8080
             scheme: HTTP
           initialDelaySeconds: 5
           periodSeconds: 10
@@ -124,7 +124,7 @@ spec:
           failureThreshold: 3
           httpGet:
             path: /health
-            port: 8081
+            port: 8080
             scheme: HTTP
           initialDelaySeconds: 5
           periodSeconds: 5
@@ -187,9 +187,9 @@ spec:
           defaultMode: 420
           name: airflow-init
         name: init-airflow
-      - configMap:
-          defaultMode: 420
-          name: airflow-nginx
-        name: nginx
+      # - configMap:
+      #     defaultMode: 420
+      #     name: airflow-nginx
+        # name: nginx
       - emptyDir: {}
         name: airflow-dags
