--- a/rbac/airflow-cluster-access-crb.yaml
+++ b/rbac/airflow-cluster-access-crb.yaml
@@ -22,4 +22,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: airflow-cluster-access
-  namespace: airflow
+  namespace: ${AIRFLOW_NAMESPACE}
