--- a/web/airflow-web.yaml
+++ b/web/airflow-web.yaml
@@ -4,7 +4,6 @@ metadata:
   labels:
     app: airflow-web
   name: airflow-web
-  namespace: airflow
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
@@ -58,40 +57,6 @@ spec:
         volumeMounts:
         - mountPath: /git
           name: airflow-dags
-      # - image: serverbee/airflow-nginx
-      #   imagePullPolicy: IfNotPresent
-      #   livenessProbe:
-      #     failureThreshold: 5
-      #     httpGet:
-      #       path: /health
-      #       port: 8081
-      #       scheme: HTTP
-      #     initialDelaySeconds: 5
-      #     periodSeconds: 10
-      #     successThreshold: 1
-      #     timeoutSeconds: 5
-      #   name: nginx
-      #   ports:
-      #   - containerPort: 80
-      #     name: nginx
-      #     protocol: TCP
-      #   readinessProbe:
-      #     failureThreshold: 3
-      #     httpGet:
-      #       path: /health
-      #       port: 8081
-      #       scheme: HTTP
-      #     initialDelaySeconds: 5
-      #     periodSeconds: 5
-      #     successThreshold: 1
-      #     timeoutSeconds: 5
-      #   resources: {}
-      #   terminationMessagePath: /dev/termination-log
-      #   terminationMessagePolicy: File
-      #   volumeMounts:
-      #   - mountPath: /etc/nginx/conf.d/default.conf
-      #     name: nginx
-      #     subPath: nginx.conf
       - args:
         - webserver
         env:
@@ -105,7 +70,7 @@ spec:
         envFrom:
         - secretRef:
             name: airflow-env
-        image: serverbee/airflow:latest
+        image: ${AIRFLOW_IMAGE}
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 5
@@ -138,12 +103,8 @@ spec:
         volumeMounts:
         - mountPath: /config
           name: airflow-config
-          # subPath: airflow.cfg
         - mountPath: /usr/local/airflow/webserver_config.py
           name: webserver-config
-          # subPath: webserver_config.py
-        # - mountPath: /usr/local/airflow/logs
-        #   name: airflow-logs
         - mountPath: /usr/local/airflow/dags
           name: airflow-dags
       dnsPolicy: ClusterFirst
@@ -156,7 +117,7 @@ spec:
         envFrom:
         - secretRef:
             name: airflow-env
-        image: serverbee/airflow:latest
+        image: ${AIRFLOW_IMAGE}
         imagePullPolicy: IfNotPresent
         name: init-airflow
         env:
@@ -170,15 +131,11 @@ spec:
           name: airflow-config
         - mountPath: /entrypoint
           name: init-airflow
-          # subPath: init-airflow.sh
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
       volumes:
-      # - name: airflow-logs
-      #   persistentVolumeClaim:
-      #     claimName: airflow-logs
       - configMap:
           defaultMode: 420
           name: airflow-config
@@ -191,9 +148,5 @@ spec:
           defaultMode: 420
           name: airflow-init
         name: init-airflow
-      # - configMap:
-      #     defaultMode: 420
-      #     name: airflow-nginx
-        # name: nginx
       - emptyDir: {}
         name: airflow-dags
